# QR-Generator

./: README.md  pyproject.toml  requirements.txt
pretty_qr/: __init__.py  api.py  cli.py  generator.py  gradients.py  logo.py  models.py  patterns.py  presets.py  renderer.py
pretty_qr/tests/: test_core.py
